hard-gists/3693550/run.log
=== Docker Run Log for 3693550 ===
Started at: Mi 29. Okt 13:56:36 CET 2025

[2025-10-29 13:56:37] START: Running container for 3693550
[2025-10-29 13:56:37] SUCCESS: Container 525e6573a0ea44c32034689a77240d22d4ec7b836843d1035cf953087e05633a started for 3693550
=== Container logs for 3693550 ===
  File "/snippet.py", line 67
    print Opt
    ^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 3693550 ===
[2025-10-29 13:56:39] INFO: Container 525e6573a0ea44c32034689a77240d22d4ec7b836843d1035cf953087e05633a has stopped
